Arregla errores en ejercicios y actualiza comandos de siunitx

--- a/libro/CelulaSolar.tex
+++ b/libro/CelulaSolar.tex
@@ -836,7 +836,7 @@ con hidrógeno se obtiene de vuelta silicio, válido para células policristalin
 el silicio monocristalino (un sólo cristal) obtenido mediante el proceso
 de Czochralski o similar (se utiliza una semilla de cristal para crecer
 silicio a muy alta temperatura). El lingote resultante debe ser cortado
-en obleas de $\SIrange[range-phrase=-]{200}{500}{\micro\meter}$. Las
+en obleas de $\qtyrange[range-phrase=-]{200}{500}{\um}$. Las
 obleas son sometidas a un proceso de limpieza para eliminar impurezas
 por el corte. A continuación, son dopadas con fósforo y boro para
 crear la unión p-n. Se limpian los bordes para evitar la formación
