--- a/libro/GeometriaSolar.tex
+++ b/libro/GeometriaSolar.tex
@@ -114,11 +114,11 @@ del 22-23 Septiembre (día del año 265-266).}%
 la declinación es nula, de forma que el Sol amanece y anochece exactamente
 por el Este y Oeste, respectivamente, siendo equivalentes la duración
 de día y noche. En el solsticio de junio (21-22 Junio, día del año
-172-173) la declinación toma el valor $\delta=23.45\degree$. En el
+172-173) la declinación toma el valor $\delta=\ang{23.45}$. En el
 hemisferio Norte es llamado de verano, produciéndose aquí el día más
 largo del año con el Sol amaneciendo por el noreste y anocheciendo
 por el noroeste. En el solsticio de Diciembre (21-22 Diciembre, día
-del año 355-356) la declinación toma el valor $\delta=-23.45\degree$.
+del año 355-356) la declinación toma el valor $\delta=\ang{-23.45}$.
 En el hemisferio Norte este solsticio es denominado de invierno, ocurriendo
 el día más corto, con el Sol amaneciendo por el sureste y anocheciendo
 por el suroeste%
@@ -392,12 +392,12 @@ al calcular las sombras lejanas que inciden en un sistema fotovoltaico
 
 \begin{figure}
 \begin{centering}
-\hfill{}\subfloat[Latitud $60\degree\mathrm{N}$.
+\hfill{}\subfloat[Latitud $\ang{60}\mathrm{N}$.
 ]{\begin{centering}
 \includegraphics[scale=0.47]{../figs/TrayectoriaSolar60N}
 \par\end{centering}
 
-}\hfill{}\subfloat[Latitud $40\degree\mathrm{S}$.
+}\hfill{}\subfloat[Latitud $\ang{40}\mathrm{S}$.
 ]{\begin{centering}
 \includegraphics[scale=0.47]{../figs/TrayectoriaSolar40S}
 \par\end{centering}
@@ -412,7 +412,7 @@ en dos localidades terrestres.\label{fig:DiagramaElevacionAcimutSolar}}
 
 Utilizando la ecuación \ref{eq:cosThetaZs} podemos calcular la hora
 solar correspondiente al amanecer y atardecer, situaciones caracterizadas
-por una altura solar nula. Por tanto, con $\theta_{zs}=90\degree$,
+por una altura solar nula. Por tanto, con $\theta_{zs}=\ang{90}$,
 el ángulo correspondiente al amanecer\footnote{En otras referencias bibliográficas se emplea el ángulo correspondiente al atardecer, y por tanto es necesario tener la precaución de cambiar el signo al comparar cálculos.} (negativo según el criterio
 de signos) es:
 
@@ -424,9 +424,9 @@ de signos) es:
 
 La duración de un día \footnote{Para traducir un valor angular en
   grados a un número de horas es suficiente tener en cuenta que un día
-  completo, correspondiente a $360\degree$, tiene una duración
+  completo, correspondiente a $\ang{360}$, tiene una duración
   media de 24 horas. Por tanto, $\SI{1}{\hour}$ equivale a
-  $15\degree$.}  cualquiera es $2\cdot|\omega_{s}|$,
+  $\ang{15}$.}  cualquiera es $2\cdot|\omega_{s}|$,
 dependiente del día del año a través de la declinación y del lugar de
 la superficie terrestre a través de la latitud. La figura
 \ref{fig:Duracion-del-Dia} permite observar que la duración del día es
@@ -444,7 +444,7 @@ cuanto mayor sea la latitud.
 
 \end{figure}
 
-Desde los círculos polares ($\phi=\pm 66.55 \degree$) hasta los polos,
+Desde los círculos polares ($\phi=\pm \ang{66.55}$) hasta los polos,
 en algunos días del año el sol permanece siempre por encima del
 horizonte. A estos días de veinticuatro horas de duración se les
 denomina días polares. En su contrapartida, las noches de veinticuatro
@@ -475,7 +475,7 @@ La hora oficial en un punto del planeta es una medida del tiempo ligada
 a un meridiano, denominado huso horario, que sirve de referencia para
 una zona determinada. En la actualidad existen 39 zonas temporales
 diferentes, si bien la primera propuesta realizada en 1879 dividía
-al planeta en 24 zonas que abarcaban $15\degree$ cada una. Todos
+al planeta en 24 zonas que abarcaban $\ang{15}$ cada una. Todos
 los husos horarios se cuentan a partir del meridiano de Greenwich
 (denominado huso horario GMT) considerando positivos aquellos situados
 al Este de este huso horario origen. Por ejemplo, a pesar de que la
@@ -485,7 +485,7 @@ la hora oficial de la España peninsular se rija por el huso horario
 de Centroeuropa%
 \footnote{El lector interesado puede encontrar más información sobre los husos
 horarios en \url{http://en.wikipedia.org/wiki/Time_zone}%
-}. Este huso horario está situado en $15\degree\mathrm{E}$ y de ahí
+}. Este huso horario está situado en $\ang{15}\mathrm{E}$ y de ahí
 que se le denomine como GMT+1 . De esta forma, la hora oficial en
 la España peninsular adelanta en promedio 60 minutos a la hora que
 corresponde al meridiano de Greenwich. Así se entiende la necesidad
@@ -559,12 +559,12 @@ en minutos.
 Por ejemplo, calculemos la hora solar real correspondiente al día
 23 de Abril de 2010 a las 12 de la mañana, hora oficial de la ciudad
 de A Coruña, Galicia. Esta localidad está contenida en el meridiano
-de longitud $8.38\degree\mathrm{W}$ y su hora oficial está regida
-por el huso horario GMT+1. Por tanto $\lambda_{L}=-8.38\degree$,
-$\lambda_{H}=15\degree$ y $\Delta\lambda=-23.38\degree$. En España
+de longitud $\ang{8.38}\mathrm{W}$ y su hora oficial está regida
+por el huso horario GMT+1. Por tanto $\lambda_{L}=\ang{-8.38}$,
+$\lambda_{H}=\ang{15}$ y $\Delta\lambda=\ang{-23.38}$. En España
 se aplica el horario de verano y este día está incluido en el período
 afectado, $\mathrm{AO}=1$. Por último, para este día $\mathrm{EoT=\SI{1.78}{\minute}}$.
-Con todos estos cálculos parciales obtenemos $\omega=-37.94\degree$
+Con todos estos cálculos parciales obtenemos $\omega=\ang{-37.94}$
 (aproximadamente las 9 y media de la mañana, hora solar real). El
 Sol culminará ($\omega=0$) cuando sean las 14:31, hora oficial.
 
@@ -681,7 +681,7 @@ de incidencia):
 
 
 La evolución del coseno del ángulo de incidencia a lo largo del día
-y año para un sitio con latitud $40\degree\mathrm{N}$ se representa
+y año para un sitio con latitud $\ang{40}\mathrm{N}$ se representa
 en la figura \ref{fig:cosThetaEst}. Es evidente que el ángulo de
 incidencia es más favorable en las horas cercanas al mediodía solar.
 
@@ -690,7 +690,7 @@ incidencia es más favorable en las horas cercanas al mediodía solar.
 \includegraphics[scale=0.75]{../figs/cosThetaEst_40N}
 
 \caption{Coseno del ángulo de incidencia en un sistema estático a lo largo
-del día y año para un sitio con latitud $40\degree\mathrm{N}$.\label{fig:cosThetaEst}}
+del día y año para un sitio con latitud $\ang{40}\mathrm{N}$.\label{fig:cosThetaEst}}
 
 \end{figure}
 
@@ -792,7 +792,7 @@ según la posición solar respecto al mediodía:\begin{equation}
 \nomenclature[psins]{$\psi_{ns}$}{Ángulo de inclinación (con signo) de un seguidor de eje horizontal Norte-Sur}
 
 La evolución del coseno del ángulo de incidencia a lo largo del día
-y año para un sitio con latitud $40\degree\mathrm{N}$ se representa
+y año para un sitio con latitud $\ang{40}\mathrm{N}$ se representa
 en la figura \ref{fig:cosThetaHoriz}. Es evidente que el movimiento
 realizado por este seguidor mejora sustancialmente el ángulo de incidencia
 respecto a un sistema estático (\ref{fig:cosThetaEst}).
@@ -802,7 +802,7 @@ respecto a un sistema estático (\ref{fig:cosThetaEst}).
 \includegraphics[scale=0.75]{../figs/cosThetaHoriz_40N}
 
 \caption{Coseno del ángulo de incidencia en un sistema de eje horizontal Norte-Sur
-a lo largo del día y año para un sitio con latitud $40\degree\mathrm{N}$.\label{fig:cosThetaHoriz}}
+a lo largo del día y año para un sitio con latitud $\ang{40}\mathrm{N}$.\label{fig:cosThetaHoriz}}
 
 \end{figure}
 
@@ -1053,16 +1053,16 @@ momento:
 
 %
 \begin{figure}
-\subfloat[Inclinación ($\degree$)]{\includegraphics[scale=0.75]{../figs/BetaDoble_40N}
+\subfloat[Inclinación]{\includegraphics[scale=0.75]{../figs/BetaDoble_40N}
 
 }
 
-\subfloat[Orientación ($\degree$)]{\includegraphics[scale=0.75]{../figs/AlfaDoble_40N}
+\subfloat[Orientación]{\includegraphics[scale=0.75]{../figs/AlfaDoble_40N}
 
 }
 
 \caption{Inclinación y orientación de un seguidor de doble eje a lo largo del
-día y año para un sitio con latitud $40\degree\mathrm{N}$.\label{fig:AngulosDobleEje}}
+día y año para un sitio con latitud $\ang{40}\mathrm{N}$.\label{fig:AngulosDobleEje}}
 
 \end{figure}
 
@@ -1087,7 +1087,7 @@ de eje horizontal y los sistemas estáticos.
 \includegraphics[scale=0.75]{../figs/cosThetaAzimutal_40N}
 
 \caption{Coseno del ángulo de incidencia de un seguidor acimutal a lo largo
-del día y año para un sitio con latitud $40\degree\mathrm{N}$.\label{fig:cosThetaAlfa}}
+del día y año para un sitio con latitud $\ang{40}\mathrm{N}$.\label{fig:cosThetaAlfa}}
 
 \end{figure}
 
