--- a/libro/SFBombeo.tex
+++ b/libro/SFBombeo.tex
@@ -602,7 +602,7 @@ donde $H_{OT}$\nomenclature[Hot]{$H_{OT}$}{Diferencia de cotas entre la salida d
 representa la altura desde la salida del pozo hasta la entrada al
 depósito y $Q_{AP}$\nomenclature[Qap]{$Q_{AP}$}{Caudal aparente}
 el caudal aparente, calculado mediante $Q_{AP}=\alpha\cdot Q_{d}$,
-y $\alpha=1 / 24 = \SI[per=reciprocal]{0.0416}{\per\hour}$. El cálculo de las
+y $\alpha=1 / 24 = \SI{0.0416}{\per\hour}$. El cálculo de las
 pérdidas de fricción en función del caudal aparente, $H_{f}(Q_{AP})$,
 se realiza recurriendo a las curvas proporcionadas por el fabricante
 de las tuberías o fijando un valor constante. En esta ecuación todas
@@ -678,7 +678,7 @@ ejemplo, la figura \ref{fig:Ejemplo-de-nomograma} recoge un nomograma
 elaborado para una bomba Grundfos SP8A44 con una radiación diaria en
 el plano del generador de
 $\SI{4}{\kWh\per\meter\squared}$.  Si el caudal requerido
-fuese de $\SI{30}{\meter\cubed\per\Day}$ y la altura manométrica fuese
+fuese de $\SI{30}{\meter\cubed\per\day}$ y la altura manométrica fuese
 de $\SI{125}{\meter}$, el generador fotovoltaico debería tener una
 potencia de aproximadamente $\SI{7.5}{\kilo\Wp}$.  Este gráfico
 de doble entrada también permite saber el caudal que será capaz de
