--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -960,12 +960,12 @@ hacia el horizonte Norte en el hemisferio Sur). La inclinación del
 generador debe ser tal que maximice la producción anual, de forma
 que estará comprendida entre la que prima la producción en los meses
 invernales y la que favorece la generación en verano. Una recomendación
-sencilla consiste en inclinar el generador $10\degree$ menos que
+sencilla consiste en inclinar el generador $\ang{10}$ menos que
 la latitud del lugar. Es posible obtener valores más precisos con
 la ecuación \ref{eq:InclinacionOptima}, en la que los ángulos de
 inclinación y latitud están en grados \cite{Lorenzo2006c}. En cualquier
 caso, es necesario que la inclinación no se encuentre por debajo de
-$15\degree$ para permitir que la suciedad acumulada pueda ser retirada
+$\ang{15}$ para permitir que la suciedad acumulada pueda ser retirada
 por la lluvia.\nomenclature[betaopt]{$\beta_{opt}$}{Ángulo de inclinación que optimiza el funcionamiento de un sistema fotovoltaico}\nomenclature[lat]{$\phi$}{Latitud del lugar}\begin{equation}
 \beta_{opt}=3.7+0.69\cdot|\phi|\label{eq:InclinacionOptima}\end{equation}
 
@@ -974,7 +974,7 @@ No obstante, y particularmente en sistemas ubicados en la edificación,
 no siempre es posible optar por la orientación e inclinación óptimas.
 Debe tenerse en cuenta que los módulos planos tienen un gran ángulo
 de visión, lo que quiere decir que las pérdidas por reflexión sólo
-son importantes a partir de un ángulo en torno a $70\degree$. Dicho
+son importantes a partir de un ángulo en torno a $\ang{70}$. Dicho
 de otra forma, la sensibilidad al desapuntamiento de un módulo fotovoltaico
 plano es muy baja y también las pérdidas energéticas asociadas. De
 aquí se aprende que es posible emplear ángulos diferentes al valor
@@ -1445,19 +1445,19 @@ $L$ la longitud del generador, según se indica en la figura \ref{fig:Sombras-en
 
 
 En el mediodía del solsticio de invierno la altura solar es
-$\gamma_{s}=90\degree-23.45\degree-|\phi|\simeq67\degree-|\phi|$
+$\gamma_{s}=\ang{90} - \ang{23.45}-|\phi|\simeq \ang{67}-|\phi|$
 \nomenclature[gammas]{$\gamma_{s}$}{Altura solar}.
 Por tanto, la distancia mínima que permite 4 horas libres de sombra
 alrededor del mediodía es:
 
 \begin{equation}
-d_{min}=\frac{h}{\tan(61\degree-|\phi|)}
+d_{min}=\frac{h}{\tan(\ang{61}-|\phi|)}
 \end{equation}
 \nomenclature[dmin]{$d_{min}$}{Distancia mínima entre hileras de un generador para evitar el sombreado}
 
 A modo de ejemplo, calculemos el ROT que resulta de aplicar este
-criterio a un lugar con latitud $\phi=41\degree$. El ángulo de inclinación
-óptimo para esta latitud es, aproximadamente, $\beta=30\degree$ y por
+criterio a un lugar con latitud $\phi=\ang{41}$. El ángulo de inclinación
+óptimo para esta latitud es, aproximadamente, $\beta=\ang{30}$ y por
 tanto $h=L/2$ y $d_{min}=\frac{L}{2 \cdot \tan(20)} \simeq 1.37 \cdot
 L$. Siguiendo la figura \ref{fig:Sombras-entre-filas},
 $ROT=\frac{A_T}{A_G}=\frac{d+L \cdot \cos(\beta)}{L}$. Por tanto, en
