--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -302,7 +302,7 @@ tanto la asociación paralelo de la resistencia de aislamiento con la de la
 persona puede aproximarse por esta última, $R_{iso}||R_{h} \simeq R_h$. El comportamiento
 eléctrico de un ser humano puede ser representado con una resistencia
 tipo de $R_{h}=\SI{1000}{\ohm}$. Para la capacidad es posible adoptar
-un valor de $C_{iso}=\SI{1}{\micro\farad}$\nomenclature[Ciso]{$C_{iso}$}{Capacidad distribuida de un generador fotovoltaico con esquema de conexión a tierra IT}
+un valor de $C_{iso}=\SI{1}{\uF}$\nomenclature[Ciso]{$C_{iso}$}{Capacidad distribuida de un generador fotovoltaico con esquema de conexión a tierra IT}
 de acuerdo a ensayos en sistemas reales \cite{Gomez-Vidal2000}.
 De esta forma, la constante de tiempo de este sistema es $T\simeq C_{iso}\cdot R_{h}=\SI{1}{\milli\second}$.
 Según la norma CEI479-2 la corriente de descarga tiene una duración
