Subsanar un par de erratas

--- a/biblio.bib
+++ b/biblio.bib
@@ -3312,7 +3312,7 @@
   Author                   = {S.K. Firth and K.J. Lomas and S.J. Rees},
   Journal                  = {Solar Energy},
   Year                     = {2010},
-  Note                     = {<ce:title>International Conference CISBAT 2007</ce:title>},
+  Note                     = {International Conference CISBAT 2007},
   Number                   = {4},
   Pages                    = {624 - 635},
   Volume                   = {84},
@@ -11095,7 +11095,7 @@
   Author                   = {M.J. (Mariska) de Wild-Scholten},
   Journal                  = {Solar Energy Materials and Solar Cells },
   Year                     = {2013},
-  Note                     = {<ce:title>Thin-film Photovoltaic Solar Cells</ce:title> },
+  Note                     = {Thin-film Photovoltaic Solar Cells },
   Number                   = {0},
   Pages                    = {296 - 305},
   Volume                   = {119},
@@ -11410,7 +11410,7 @@
   Author                   = {Dazhi Yang and Panida Jirutitijaroen and Wilfred M. Walsh},
   Journal                  = {Solar Energy},
   Year                     = {2012},
-  Note                     = {<ce:title>Solar Resources</ce:title>},
+  Note                     = {Solar Resources},
   Number                   = {12},
   Pages                    = {3531 - 3543},
   Volume                   = {86},
