--- a/libro/EPBT.tex
+++ b/libro/EPBT.tex
@@ -174,11 +174,11 @@ exactitud y generalidad, máxime cuando las reticencias impuestas por
 la confidencialidad industrial contribuyen al ruido en la
 información. Por ejemplo, \cite{Alsema2000} realiza una revisión de
 estimaciones publicadas en la que encuentra valores en un rango
-comprendido entre $\SI{5300}{\mega\joule\per\squared\meter}$ y
-$\SI{16500}{\mega\joule\per\squared\meter}$ para la fabricación de
+comprendido entre $\SI{5300}{\mega\joule\per\meter\squared}$ y
+$\SI{16500}{\mega\joule\per\meter\squared}$ para la fabricación de
 módulos de silicio monocristalino. Es más, a pesar de realizar un
 análisis comparativo para conseguir la mejor estimación, que este
-autor cifra en $\SI{5700}{\mega\joule\per\squared\meter}$, concluye
+autor cifra en $\SI{5700}{\mega\joule\per\meter\squared}$, concluye
 que la incertidumbre no es menor del 40\%. De ahí que los resultados
 que se obtengan serán meramente indicativos y útiles en el contexto de
 la comparativa enunciada.
@@ -191,7 +191,7 @@ recopila cifras de energía primaria.
 Según la referencia \cite{Alsema.Wild-Scholten2006}, la energía
 primaria empleada en la fabricación de los módulos fotovoltaicos de
 silicio monocristalino es de
-$\SI{5200}{\mega\joule\per\squared\meter}$, con el desglose recogido
+$\SI{5200}{\mega\joule\per\meter\squared}$, con el desglose recogido
 en la tabla \ref{tab:ContribucionEnergetica}. El documento de esta
 referencia es el resultado de un proyecto colaborativo, en el que
 numerosas empresas e investigadores han aunado esfuerzos para
